# OS

./: CMakeLists.txt  Lab2.py3  Lab2C  Lab2C.c  ProcesiNitkiKriptoValuti.c  VezbaCas3Datoteki.c  VezbaCasBtc.py  VezbaCasZborPrebaruva.py3  cas.sh  dat.txt  helloworld.cpp  lb2  pomfrit.txt  public  rootprocesi.txt  shellPythonPrebaruva.sh  sortirani.txt  sys  test
Kolokviumski/: 24_25_Kolokviumska  24_25_Kolokviumska.c  24_25_Shell.sh  BTC  ETH  all.crypto  btc.crypto  eth.crypto
Kolokviumski/21_22_Kol/: fajlPrva  prva.py  sys
Kolokviumski/23_24_Kol/: fajl  ipadresi.py
Kolokviumski/ProcesiNitki/: 20_21_Zad1  20_21_Zad1.c
Public/: nitkiniza  nitkiniza.c  nitkiprimer  nitkiprimer.c  procesi2vezba  procesi2vezba.c  procesi3vezba  procesi3vezba.c  public.c
