cmake_minimum_required(VERSION 4.0)
project(OS)

set(CMAKE_CXX_STANDARD 14)

add_executable(OS
        helloworld.cpp
        Lab2C.c
        ProcesiNitkiKriptoValuti.c
        Public/public.c
        VezbaCas3Datoteki.c
        Public/procesi2vezba.c
        Public/procesi3vezba.c
        Public/nitkiprimer.c
        Public/nitkiniza.c
        Kolokviumski/24_25_Kolokviumska.c
        Kolokviumski/ProcesiNitki/20_21_Zad1.c)
